--- a/JavaS/task2/index.html
+++ b/JavaS/task2/index.html
@@ -8,16 +8,16 @@
 <body>
     <h3 id="consoleLog">console.log</h3>
 <code>
-    <p id="Primer1">Пример использования команды console.log</p>
+    <p id="Primer1">cosole.log('текст, выведенный в кносоль');</p>
 </code>
     <h3 id="alert">alert</h3>
 <code>
-    <p id="Primer2">Пример использования команды alert</p>
+    <p id="Primer2">alert('вывод сообщения для пользователя');</p>
     
 </code>
 <h3 id="prompt">prompt</h3>
 <code>
-    <p id="Primer3">Пример использования команды prompt</p>
+    <p id="Primer3">prompt('окно для ввода текста');</p>
 </code>
 <script src="script.js" ></script>  
 </body>
